# AI_PAM

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
notebooks/: log-generating.ipynb  research.ipynb
scripts/: validate_model.py
src/: utils.py
src/classifiers/: __init__.py  metric_estimator.py  zeroshot.py
src/classifiers/zeroshot/: __init__.py  llm.py  system_prompt.py
src/generator/: prompts.py
