[project]
name = "ai-pam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "accelerate>=1.5.2",
    "logbook>=1.8.1",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]

[dependency-groups]
research = [
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "openai>=1.70.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
]
vc-utils = [
    "pre-commit>=4.2.0",
]
